Fixed header overlapping with content

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -224,7 +224,7 @@
     --ifm-menu-link-padding-horizontal:1rem;
     --ifm-menu-link-padding-vertical:0.375rem;
     --ifm-navbar-background-color:var(--ifm-background-surface-color);
-    --ifm-navbar-height:4.75rem;
+    --ifm-navbar-height:72px;
     --ifm-navbar-item-padding-horizontal:1rem;
     --ifm-navbar-item-padding-vertical:0.25rem;
     --ifm-navbar-link-color:var(--ifm-font-base-color);
@@ -909,7 +909,6 @@ p {
 .main-wrapper{
     flex:1 0 auto;
     margin-top:calc(1em + var(--ifm-navbar-height));
-    box-shadow:var(--ifm-global-shadow-md);
 }
 
 /*******************************************************************************
@@ -2159,10 +2158,6 @@ line-height: 1;
 }
 
 /* misc fixes */
-
-.main-wrapper {
-  margin-top: 4em;
-}
 
 section > .container > .row > .col {
   margin-top: 1em;
